--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
+    "html-react-parser": "^3.0.4",
     "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
