--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "html-react-parser": "^3.0.4",
     "prettier": "^2.8.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.4",
