--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "html-react-parser": "^3.0.4",
+    "lodash": "^4.17.21",
     "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
